[#8] - Added Celery for backgroung tasks, added Redis database and Makefile file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,13 @@ services:
     networks:
       - datanodes-network
 
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+    networks:
+      - datanodes-network
+
 volumes:
   db-data:
   db-data-mongodb:
